<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="local_exception_occurred">A local error has occurred.</string>
    <string name="network_exception_occurred">A network error has occurred.</string>
    <string name="try_again_later">Try again later.</string>
    <string name="air_tickets">Air tickets</string>
    <string name="hotels">Hotels</string>
    <string name="shorter">Shorter</string>
    <string name="profile">Profile</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="cheap_air_tickets_search">Поиск дешевых \n авиабилетов</string>
    <string name="from_moscow">Откуда - Москва</string>
    <string name="where_turkey">Куда - Турция</string>
    <string name="search_icon">Иконка поиска</string>
    <string name="fly_away_musically">Музыкально отлететь</string>
    <string name="card_price_template">от 22 222 ₽</string>
    <string name="title">Название</string>
    <string name="town">Город</string>
    <string name="difficult_route">Сложный маршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="holidays">Выходные</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="cyrillic_letters">АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ абвгдеёжзийклмнопрстуфхцчшщъыьэюя</string>
    <string name="no_name_fragment">Безымянный фрагмент</string>
    <string name="istanbul">Стамбул</string>
    <string name="popular_route">Популярное направление</string>
    <string name="sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
    <string name="econom">эконом</string>
    <string name="back">обратно</string>
    <string name="date_template">24 фев, сб</string>
    <string name="passenger_class_template">1,эконом</string>
    <string name="filters">фильтры</string>
    <string name="direct_flight">Прямые рейсы</string>
    <string name="show_all">Показать все</string>
    <string name="see_all_tickets">Посмотреть все билеты</string>
    <string name="subscription_on_price">Подписка на цену</string>
    <string name="ural_airlines">Уральские авиалинии</string>
    <string name="price_template">2 390 ₽</string>
    <string name="prices_template">07:00 09:10 10:00 11:00 12:00 13:00 14:00 15:00 16:00 17:00</string>
    <string name="error_occurred_on_data_loading">Произошла ошибка при загрузке данных</string>
    <string name="passenger_count_and_class">%d,%s</string>
    <string name="airport_template">DME</string>
    <string name="time_template">17:45</string>
    <string name="travel_time_template">3.5ч в пути / Без пересадок</string>
    <string name="badge_template">Самый удобный</string>
    <string name="moscow_to_sochi_example">Москва-Сочи</string>
    <string name="date_passenger_example">23 февраля, 1 пассажир</string>
    <string name="filter">Фильтр</string>
    <string name="price_chart">График цен</string>
    <string name="dash_two_items">%s-%s</string>
    <string name="date_passenger">%s, %d пассажир</string>
</resources>