<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:layout_marginEnd="67dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:scaleType="centerCrop"
        android:src="@drawable/musical_offer_image_1" />

    <TextView
        style="@style/Title3"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/title" />

    <TextView
        style="@style/Text2"
        android:id="@+id/town"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/town" />

    <TextView
        style="@style/Text2"
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_price_template"
        app:drawableStartCompat="@drawable/ic_air_tickets" />

</LinearLayout>