<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/difficult_route_tv"
        style="@style/Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:maxWidth="70dp"
        android:text="@string/difficult_route"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/ic_difficult_route" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/anywhere_tv"
        style="@style/Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:maxWidth="70dp"
        android:text="@string/anywhere"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/ic_anywhere" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/holidays_tv"
        style="@style/Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:maxWidth="70dp"
        android:text="@string/holidays"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/ic_holidays" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/hot_tickets_tv"
        style="@style/Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:maxWidth="70dp"
        android:text="@string/hot_tickets"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/ic_hot_tickets" />

</LinearLayout>