<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search_country_chosen_screen.SearchCountryChosenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/search_card_background"
        android:backgroundTint="@color/grey_3"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/icon_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/start_destination_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:digits="@string/cyrillic_letters"
            android:drawableEnd="@drawable/ic_swap"
            android:hint="@string/from_moscow"
            android:imeOptions="actionNext"
            android:inputType="text|textCapSentences"
            android:textAppearance="@style/ButtonText1"
            android:textColor="@color/white"
            android:textColorHint="@color/grey_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_search"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_5"
            app:layout_constraintEnd_toEndOf="@id/start_destination_et"
            app:layout_constraintStart_toStartOf="@id/start_destination_et"
            app:layout_constraintTop_toBottomOf="@id/start_destination_et" />

        <EditText
            android:id="@+id/end_destination_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:digits="@string/cyrillic_letters"
            android:drawableEnd="@drawable/ic_cross"
            android:hint="@string/where_turkey"
            android:imeOptions="actionDone"
            android:inputType="text|textCapSentences"
            android:textAppearance="@style/ButtonText1"
            android:textColor="@color/white"
            android:textColorHint="@color/grey_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/divider"
            app:layout_constraintStart_toStartOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="13dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/departure_date_tv"
                style="@style/Title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_50_dp"
                android:drawablePadding="8dp"
                android:paddingHorizontal="4dp"
                android:paddingVertical="8dp"
                android:text="@string/back"
                app:drawableStartCompat="@drawable/ic_plus" />

            <TextView
                android:id="@+id/return_ticket_date_tv"
                style="@style/Title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_50_dp"
                android:paddingHorizontal="10.5dp"
                android:paddingVertical="8dp"
                android:text="@string/date_template" />

            <TextView
                android:id="@+id/passengers_class_tv"
                style="@style/Title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_50_dp"
                android:drawablePadding="8dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/passenger_class_template"
                app:drawableStartCompat="@drawable/ic_profile_small" />

            <TextView
                android:id="@+id/filters_tv"
                style="@style/Title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_50_dp"
                android:drawablePadding="8dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/filters"
                app:drawableStartCompat="@drawable/ic_filter" />

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/search_card_background"
        android:backgroundTint="@color/grey_1"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="6dp">

        <TextView
            style="@style/Title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direct_flight" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/offers_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TextView
            style="@style/ButtonText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/show_all"
            android:textColor="@color/blue" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/see_all_tickets_btn"
        style="@style/MaterialButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="23dp"
        android:text="@string/see_all_tickets" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_8_dp"
        android:backgroundTint="@color/grey_2"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/subscription_on_price"
            android:src="@drawable/ic_subscriptions"
            app:tint="@color/blue" />

        <TextView
            style="@style/Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscription_on_price" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>