<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:paddingHorizontal="8dp"
    android:paddingTop="16dp">

    <View
        android:id="@+id/circle_view"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Title4"
        android:id="@+id/title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ural_airlines"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/price_tv"
        app:layout_constraintStart_toEndOf="@+id/circle_view"
        app:layout_constraintTop_toTopOf="@id/circle_view" />

    <TextView
        android:id="@+id/price_tv"
        style="@style/Title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_template"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:layout_constraintTop_toTopOf="@id/circle_view"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/time_tv"
        style="@style/Text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:layout_marginTop="4dp"
        android:lines="1"
        android:text="@string/prices_template"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_4"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/time_tv"/>

</androidx.constraintlayout.widget.ConstraintLayout>