<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_8_dp"
    android:backgroundTint="@color/grey_1"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="4dp"
    android:paddingBottom="23dp">

    <TextView
        style="@style/Title1"
        android:id="@+id/price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_template"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/circle_view"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/departure_time_tv"
        app:layout_constraintBottom_toBottomOf="@id/departure_airport_tv"
        android:backgroundTint="@color/red"/>
    
    <TextView
        style="@style/Title4"
        android:id="@+id/departure_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/price_tv"
        app:layout_constraintStart_toEndOf="@id/circle_view"
        android:layout_marginStart="8dp"
        android:text="@string/time_template"
        android:layout_marginTop="16dp" />

    <TextView
        style="@style/Title4"
        android:id="@+id/departure_airport_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/departure_time_tv"
        app:layout_constraintStart_toStartOf="@id/departure_time_tv"
        android:text="@string/airport_template"
        android:textColor="@color/grey_6"
        android:layout_marginTop="4dp" />

    <View
        android:id="@+id/dash_view"
        android:layout_width="10dp"
        android:layout_height="1dp"
        android:background="@color/grey_6"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@id/departure_time_tv"
        app:layout_constraintStart_toEndOf="@+id/departure_time_tv"
        app:layout_constraintTop_toTopOf="@+id/departure_time_tv" />

    <TextView
        style="@style/Title4"
        android:id="@+id/arrival_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@id/departure_time_tv"
        app:layout_constraintStart_toEndOf="@id/dash_view"
        android:text="@string/time_template" />

    <TextView
        style="@style/Title4"
        android:id="@+id/arrival_airport_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/arrival_time_tv"
        app:layout_constraintStart_toStartOf="@id/arrival_time_tv"
        android:text="@string/airport_template"
        android:textColor="@color/grey_6"
        android:layout_marginTop="4dp" />

    <TextView
        style="@style/Text2"
        android:id="@+id/travel_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_time_template"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/arrival_time_tv"
        app:layout_constraintTop_toTopOf="@id/arrival_time_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>